--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,42 @@
 /**==========BODY==========**/
-a {
-    text-decoration: none;
-}
-ul {
-    list-style-type: none;
-}
 .body-website {
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
-
+}
+p,h1,h2,h3,h4,h5,h6 {
+    margin-left: 0;
+    margin-right: 0;
+}
+ul {
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+a {
+    text-decoration: none;
 }
 /**====================**/
 
 
 
 /**==========HEADER==========**/
-.header-titel {
-
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
+.conteiner {
+    width: 100%;
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+.header-conteiner {
+    display: flex;
+}
+
 .logo {
     color: #4d5ae5;
     font-family: Raleway,sans-serif;
@@ -30,6 +48,20 @@ ul {
 }
 .logo-studio {
     color: #2E2F42;
+}
+
+.header-titel {
+    display: flex;
+    flex-grow: 1;
+}
+.menu {
+    display: flex;
+    gap: 40px;
+    margin-left: 76px;
+}
+.menu-soc-list {
+    display: flex;
+    gap: 40px;
 }
 
 .header-list {
@@ -68,6 +100,10 @@ ul {
 .main-titel {
     background: var(--NAVY-BLUE, #2E2F42);
 }
+.effective-conteiner {
+    padding-top: 188px;
+    padding-bottom: 292px;
+}
 .main-effective {
     color: var(--WHITE, #FFF);
     text-align: center;
@@ -75,16 +111,25 @@ ul {
     font-weight: 700;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    max-width: 496px;
+    margin: 0 auto;
 }
+/**background: var(--IRIS, #4D5AE5);**/
 .main-btm {
+    display: block;
+    color: #ffffff;
     background: var(--IRIS, #4D5AE5);
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    text-align: center;
     cursor: pointer;
-    color: #ffffff
+    border: none;
+    border-radius: 4px;
+    padding: 16px 32px;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 48px;
 }
 .main-titel button:hover {
     background-color: #404BBF
@@ -96,6 +141,29 @@ ul {
 /**====================**/
 
 /**==========MAIN-2==========**/
+
+.advantages {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.name-section-two {
+    color: var(--NAVY-BLUE, #2E2F42);
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+}
+.hard-worker {
+    display: flex;
+    gap: 8px;
+}
+.advantages-list-title {
+    width: calc((100% - 72px)/4);
+}
+
 .list-title {
     color: var(--NAVY-BLUE, #2E2F42);
     font-size: 20px;
@@ -116,6 +184,8 @@ ul {
 /**==========MAIN-3==========**/
 .our-team-title {
     background: var(--CLOUD, #F4F4FD);
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 .main-team {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -125,28 +195,101 @@ ul {
     line-height: 1.11;
     letter-spacing: 0.02em;;
     text-transform: capitalize;
+    margin-bottom: 72px;
+}
+.programing-team {
+    display: flex;
+    gap: 24px;
 }
 .team-group {
     background: var(--WHITE, #FFF);
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .group-programmers {
-
+    padding-bottom: 32px;
 }
 
+.list-title-team {
+    color: var(--NAVY-BLUE, #2E2F42);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+.list-programing-work {
+    color: var(--SLATE, #434455);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding-bottom: 32px;
+}
+
+
+
+
+
+
 /**====================**/
+
+
+
+
+
+
+/**==========MAIN4==========**/
+.our-portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.portfolio-list-app {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px ;
+}
+.program-app-marketing {
+    padding-bottom: 32px;
+}
+.list-title-portfolio {
+    color: var(--NAVY-BLUE, #2E2F42);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+.list-paragraph-portfolio {
+    color: var(--SLATE, #434455);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding-bottom: 32px;
+}
+/**====================**/
+
+
+
+
 
 
 /**==========FOOTER==========**/
 .footer-flow {
     background: var(--NAVY-BLUE, #2E2F42);
+    padding-top: 100px;
+    padding-bottom: 100px
 }
 .header-titel-type {
     color: var(--IRIS, #4D5AE5);
-font-size: 18px;
-font-weight: 700;
-line-height: 1.17;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 .footer-titel-type {
     color: var(--CLOUD, #F4F4FD);
@@ -157,6 +300,8 @@ text-transform: uppercase;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-top: 18px;
+    width: 264px;
 }
 
 
