--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,13 @@
     color: #434455;
     background-color: #FFFFFF;
 }
+.container {
+    width: 100%;
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
 p,h1,h2,h3,h4,h5,h6 {
     margin-left: 0;
     margin-right: 0;
@@ -23,16 +30,9 @@ a {
 
 /**==========HEADER==========**/
 .header {
-    padding-top: 24px;
-    padding-bottom: 24px;
+    border-bottom: 1px solid #e7e9fc
 }
-.conteiner {
-    width: 100%;
-    max-width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
-}
+
 .header-conteiner {
     display: flex;
 }
@@ -45,6 +45,7 @@ a {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px;
 }
 .logo-studio {
     color: #2E2F42;
@@ -53,6 +54,9 @@ a {
 .header-titel {
     display: flex;
     flex-grow: 1;
+    align-items: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .menu {
     display: flex;
@@ -62,6 +66,8 @@ a {
 .menu-soc-list {
     display: flex;
     gap: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .header-list {
@@ -99,11 +105,10 @@ a {
 /**==========MAIN-1==========**/
 .main-titel {
     background: var(--NAVY-BLUE, #2E2F42);
-}
-.effective-conteiner {
     padding-top: 188px;
-    padding-bottom: 292px;
+    padding-bottom: 188px;
 }
+
 .main-effective {
     color: var(--WHITE, #FFF);
     text-align: center;
@@ -116,6 +121,7 @@ a {
 }
 /**background: var(--IRIS, #4D5AE5);**/
 .main-btm {
+    min-width: 169px;
     display: block;
     color: #ffffff;
     background: var(--IRIS, #4D5AE5);
@@ -146,19 +152,22 @@ a {
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.name-section-two {
-    color: var(--NAVY-BLUE, #2E2F42);
-    text-align: center;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.02em;;
-    text-transform: capitalize;
-    margin-bottom: 72px;
+.visually-hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
+
 .hard-worker {
     display: flex;
-    gap: 8px;
+    gap: 24px;
 }
 .advantages-list-title {
     width: calc((100% - 72px)/4);
@@ -170,6 +179,7 @@ a {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .list-paragraph {
     color: var(--SLATE, #434455);
@@ -177,6 +187,7 @@ a {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin: 0;
 }
 
 /**====================**/
@@ -207,9 +218,12 @@ a {
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .group-programmers {
+    display: block;
+}
+.name-programist {
+    padding-top: 32px;
     padding-bottom: 32px;
 }
-
 .list-title-team {
     color: var(--NAVY-BLUE, #2E2F42);
     text-align: center;
@@ -218,6 +232,7 @@ a {
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
+    margin-top: 0;
 }
 .list-programing-work {
     color: var(--SLATE, #434455);
@@ -226,7 +241,7 @@ a {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-bottom: 32px;
+    margin: 0;
 }
 
 
@@ -251,8 +266,14 @@ a {
     flex-wrap: wrap;
     gap: 48px 24px ;
 }
+.portfolio-list-program {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px
+}
 .program-app-marketing {
-    padding-bottom: 32px;
+    display: block;
 }
 .list-title-portfolio {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -260,7 +281,7 @@ a {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    margin-bottom: 8px;
+
 }
 .list-paragraph-portfolio {
     color: var(--SLATE, #434455);
@@ -268,7 +289,6 @@ a {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-bottom: 32px;
 }
 /**====================**/
 
@@ -282,6 +302,18 @@ a {
     background: var(--NAVY-BLUE, #2E2F42);
     padding-top: 100px;
     padding-bottom: 100px
+}
+.logo-footer {
+    color: #4d5ae5;
+    font-family: Raleway,sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-right: 76px;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 .header-titel-type {
     color: var(--IRIS, #4D5AE5);
@@ -300,7 +332,6 @@ a {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    margin-top: 18px;
     width: 264px;
 }
 
