--- a/css/styles.css
+++ b/css/styles.css
@@ -84,15 +84,15 @@ a {
 .address-header {
     font-style: normal
 }
-
+.list-menu {
+    padding: 24px 0;
+}
 .header-address {
     color: var(--SLATE, #434455);
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 .address-header a:hover {
     color: #404bbf
