--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,11 @@ a {
 .header {
     border-bottom: 1px solid #e7e9fc
 }
-
 .header-conteiner {
     display: flex;
+    align-items: center;
 }
+
 
 .logo {
     color: #4d5ae5;
@@ -46,6 +47,7 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-right: 76px;
+    align-items: center;
 }
 .logo-studio {
     color: #2E2F42;
@@ -85,14 +87,15 @@ a {
     font-style: normal
 }
 .list-menu {
+
 }
 .header-address {
-    padding: 24px 0;
     color: var(--SLATE, #434455);
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 24px 0;
 }
 .address-header a:hover {
     color: #404bbf
