--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ a {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 24px 0;
 }
 .header .header-titel .menu a:hover {
     color: #404bbf
