--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,14 @@
     padding-right: 15px;
     margin: 0 auto;
 }
-p,h1,h2,h3,h4,h5,h6 {
-    margin-left: 0;
-    margin-right: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
 }
 ul {
     list-style-type: none;
@@ -56,7 +61,7 @@ a {
 .header-titel {
     display: flex;
     align-items: center;
-    margin: 0 auto;
+    margin-right: auto;
 }
 .menu {
     display: flex;
